# dtc_capstone_music_streaming_app

./: .gitignore  .gitmodules  Makefile  README.md  generate_arch.py  main.py  pyproject.toml
dags/: deploy_dags.sh  music_streaming_dbt.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: sources.yml
dbt/models/gold/: _gold__models.yml  gold_daily_listening_stats.sql  gold_hourly_listening_heatmap.sql  gold_pipeline_status.sql  gold_qoq_listener_growth.sql  gold_top_artists_daily.sql  gold_top_songs_daily.sql  gold_user_activity_daily.sql
dbt/models/silver/: _silver__models.yml  silver_auth_events.sql  silver_listen_events.sql  silver_page_view_events.sql  silver_status_change_events.sql
dbt/setup/: create_bronze_tables.sh
docker/flink/: Dockerfile  build-and-push.sh
eventsim/config/: control-config.json  test-config.json
eventsim/scripts/: gen_2025_q1.sh  gen_2026_q1.sh  gen_quarter.sh  generate_events.sh  generate_events_docker.sh  stream_to_kafka.py
k8s/: deploy.sh
k8s/flink/: flink-operator-values.yaml  flink-serviceaccount.yaml  flink-session-cluster.yaml
k8s/flink/jobs/: kafka-to-iceberg-job.yaml  kafka-to-iceberg.sql  submit-job.sh  submit_via_gateway.py
k8s/kafka/: kafka-cluster.yaml  kafka-topics.yaml
k8s/namespaces/: namespaces.yaml
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
terraform/modules/composer/: main.tf  outputs.tf  variables.tf
terraform/modules/gcs/: main.tf  outputs.tf  (+1 more)
(+8 files in other folders)
